--- a/README.html
+++ b/README.html
@@ -1,6 +1,8 @@
+</html>
 <!-- No início do seu README.md -->
 <style>
     body {
         font-family: 'Nome da Fonte', sans-serif;
     }
 </style>
+</html>html>
