--- a/README.html
+++ b/README.html
@@ -1,8 +1,14 @@
-</html>
-<!-- No início do seu README.md -->
-<style>
-    body {
-        font-family: 'Nome da Fonte', sans-serif;
-    }
-</style>
-</html>
+Trabalho prático de programação e desenvolvimento de software 2. 
+O objetivo deste trabalho é colcoar em prática os conhecimentos adquiridos durante as aulas, 
+O foco não é apenas funcionalidade, mas também confiabilidade, reusabilidade e facilidade de manutenção. Utiliza POO, modularidade e corretude, com espaço para criatividade e funcionalidades extras.
+
+Para isso, criamos um sistema que simula uma vídeo-locadora, com sistemas de:
+-cadastro de clientes 
+-cadastro de filmes 
+-controle de locação
+-visualização de filmes 
+-alugueis de filmes
+-entre outros sitemas extras
+
+
+Focamos em criar um sistema que seja completo, robusto, fácil de manusear, e que atenda as expectativas propostas. 
