--- a/README.html
+++ b/README.html
@@ -1,14 +1,26 @@
-Trabalho prático de programação e desenvolvimento de software 2. 
-O objetivo deste trabalho é colcoar em prática os conhecimentos adquiridos durante as aulas, 
-O foco não é apenas funcionalidade, mas também confiabilidade, reusabilidade e facilidade de manutenção. Utiliza POO, modularidade e corretude, com espaço para criatividade e funcionalidades extras.
-
-Para isso, criamos um sistema que simula uma vídeo-locadora, com sistemas de:
--cadastro de clientes 
--cadastro de filmes 
--controle de locação
--visualização de filmes 
--alugueis de filmes
--entre outros sitemas extras
-
-
-Focamos em criar um sistema que seja completo, robusto, fácil de manusear, e que atenda as expectativas propostas. 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Trabalho prático de programação e desenvolvimento de software 2</title>
+  <style>
+    body {
+      background-color: white;
+      color: green;
+    }
+  </style>
+</head>
+<body>
+  <h1>Trabalho prático de programação e desenvolvimento de software 2</h1>
+  <p>O objetivo deste trabalho é colcoar em prática os conhecimentos adquiridos durante as aulas, O foco não é apenas funcionalidade, mas também confiabilidade, reusabilidade e facilidade de manutenção. Utiliza POO, modularidade e corretude, com espaço para criatividade e funcionalidades extras.</p>
+  <p>Para isso, criamos um sistema que simula uma vídeo-locadora, com sistemas de:</p>
+  <ul>
+    <li>cadastro de clientes</li>
+    <li>cadastro de filmes</li>
+    <li>controle de locação</li>
+    <li>visualização de filmes</li>
+    <li>alugueis de filmes</li>
+    <li>entre outros sistemas extras</li>
+  </ul>
+  <p>Focamos em criar um sistema que seja completo, robusto, fácil de manusear, e que atenda as expectativas propostas.</p>
+</body>
+</html>
